syntax = "proto3";

package systems.v1;

import "google/api/annotations.proto";

option go_package = "github.com/realotz/whole/api/systems/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.systems.v1";
option java_outer_classname = "CategoryProtoV1";

service CategoryService {
  rpc List (CategoryListOption) returns (CategoryList)  {
        option (google.api.http) = {
            get: "/systems/category",
        };
    }
  rpc Get (CategoryGetOption) returns (Category)  {
    option (google.api.http) = {
      get: "/systems/category/{id}",
    };
  }
  rpc Create (CategoryGetOption) returns (Category)  {
    option (google.api.http) = {
      post: "/systems/category",
    };
  }
  rpc Update (CategoryUpdateOption) returns (Category)  {
    option (google.api.http) = {
      put: "/systems/category",
    };
  }
  rpc Delete (CategoryDeleteOption) returns (Category)  {
    option (google.api.http) = {
      delete: "/systems/category/{id}",
    };
  }
}

message CategoryListOption {
  string name = 1;
}

message CategoryGetOption {
  string id = 1;
}

message CategoryUpdateOption {
  string name = 1;
}

message CategoryCreateOption {
  string name = 1;
}

message CategoryDeleteOption {
  string id = 1;
}

message CategoryList {
  string message = 1;
}

message Category{

}
